<resources>
    <string name="app_name">Devotions</string>
    <string name="share_your_faith">Share your faith,</string>
    <string name="welcome_long">Welcome to the network of believers \n share and grow together</string>
    <string name="terms_and_conditions">by proceeding you agree with the <u>Terms and Conditions</u></string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="default_web_id">1099118327438-m8e3hf8uk08enphdvfc1tu9elq1qborb.apps.googleusercontent.com</string>
    <string name="loading">Signing Up</string>
    <string name="error">Error Signing up</string>
    <string name="user_db">Users</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">profile</string>
    <string name="search">search</string>
    <string name="content_description_back">back icon</string>
    <string name="new_post">New post</string>
    <string name="body_hint">Type a Devotion here...</string>
    <string name="content_description_image">image icon</string>
    <string name="send">Send Devotion</string>
</resources>